package org.manage;

public class Cottage extends Hotel {
    Cottage(String address) {
        setAddress(address);
        setType("Cottage");
    }
}